--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -130,6 +130,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
