--- a/hive-parent/pom.xml
+++ b/hive-parent/pom.xml
@@ -56,7 +56,6 @@
         <servlet.version>3.0.1</servlet.version>
         <commons-net.version>3.3</commons-net.version>
         <spring-web.version>4.1.1.RELEASE</spring-web.version>
-        <spring-test.version>4.1.1.RELEASE</spring-test.version>
         <spray-client.version>1.3.2</spray-client.version>
         <ning.version>1.8.10</ning.version>
         <akka.actor.version>2.3.8</akka.actor.version>
@@ -204,7 +203,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
-                <version>${spring-test.version}</version>
+                <version>${spring-web.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.spray</groupId>
