--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -129,7 +129,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webmvc</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
