--- a/hive-parent/pom.xml
+++ b/hive-parent/pom.xml
@@ -202,6 +202,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring-web.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${spring-web.version}</version>
             </dependency>
